gccida/c3/true_dependence
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2483:32: error: must use 'enum' tag to refer to type 'machine_mode'
int  true_dependence( rtx mem, machine_mode mem_mode, rtx x, int ( *varies)( rtx, int)) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2486:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2503:4: error: expected ';' after expression
rtx base_term; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2503:5: error: use of undeclared identifier 'base_term'
rtx base_term; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2516:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64 *)x[1]; 
                 ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2521:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64 *)mem[1]; 
                  ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2616:1: error: use of undeclared identifier 'base_term'
base_term = find_base_term( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2618:24: error: use of undeclared identifier 'base_term'
|| ( v25 = *( _DWORD *)base_term, ( _WORD)v25 != 67) && ( ( _WORD)v25 != 68 || ( v25 & 0x4000000) == 0) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2617:7: error: use of undeclared identifier 'base_term'
if ( !base_term 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/alias.c:2620:36: error: use of undeclared identifier 'machine_mode'
if ( base_alias_check( rtx, v18, ( machine_mode)*( ( unsigned __int8 *)v4 + 2), v5) ) 
                                   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/true_dependence/src/obj/alias.o] Error 1
